having AI update the dev environment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
+# Core dependencies
 pygame==2.5.2
+
+# Development dependencies (install with: pip install -r requirements-dev.txt)
+# black>=23.0.0
+# flake8>=6.0.0
+# mypy>=1.0.0
+# pylint>=3.0.0
+# pytest>=7.0.0
+# pytest-cov>=4.0.0
