--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,25 @@ build/
 dist/
 *.egg-info/
 
-# VSCode
+# Type checking
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Testing
+.coverage
+.pytest_cache/
+htmlcov/
+
+# IDE
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
 
 # macOS
 .DS_Store
+
+# Project specific
+*.log
